Signed-off-by: Alfred <reed.alfred01@gmail.com>

--- a/comics.html
+++ b/comics.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="Shared/css/site.css" type="text/css" />
-        <link rel="icon" href="Shared/img/ck.png" type="image" />
         <title>Comics Kingdom</title>
     </head>
 <body>
@@ -65,42 +64,25 @@
         </section>
         <section class="main-Container">
             <main>
-                <div class="mainArticle-Container">
-                    <a class="mainArticle-ImgLink" href="/">
-                        <div class="mainArticle-ImgContainer">
-                            <figure>
-                                <img src="Shared/img/bluemarvel.png" alt="comic image" class="articleImage">
-                            </figure>
-                        </div>
-                    </a>
-                    <article class="newsArticle">
-                        <a class="article-Category" href="/">Members</a>
-                        <h2>Comming Soon:</h2>
-                        <p>We'll soon be offering memberships that no one will want to miss!</p>
-                    </article>                        
-                </div>
+                <div class="comicsPage-Banner"></div>
                 <div class="subArticles-Container">
                     <div class="comicArticle-Container">
-                        <a href="/comics.html"><h2>Recent Comics</h2></a>
+                        <h2>Comics</h2>
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/blackpanther.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/blackpanther.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
-                                <div class="bookTitle"><h3 class="titleHeading">Black Panter</h3></div>
+                                <div class="bookTitle"><h3 class="titleHeading">Black Panter #17</h3></div>
                                 <div class="bookPrice">$4.25</div>
                                 <div class="bookDesc">Storm is once again at the side of the Black Panther. Now the retribution will begin.</div>
                                 <button class="orderButton" type="button" data-order="blackpanther">Order</button>
                             </div>                            
                         </article>
                         <article class="article-Container">
-                            <a href="comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/superman.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/superman.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">Superman</h3></div>
                                 <div class="bookPrice">$4.25</div>
@@ -109,11 +91,9 @@
                             </div>                            
                         </article>
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/xmen.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/xmen.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">X-Men</h3></div>
                                 <div class="bookPrice">$4.25</div>
@@ -122,11 +102,9 @@
                             </div>                            
                         </article>
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/batman.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/batman.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">BatMan</h3></div>
                                 <div class="bookPrice">$4.25</div>
@@ -136,13 +114,11 @@
                         </article>
                     </div>
                     <div class="mangaArticle-Container">
-                        <a href="/comics.html"><h2>Recent Manga</h2></a>
+                        <h2>Manga</h2>
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/dragonball.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/dragonball.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">Dragonball Super</h3></div>
                                 <div class="bookPrice">$4.25</div>
@@ -151,11 +127,9 @@
                             </div>                            
                         </article>
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/naruto.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/naruto.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">Naruto</h3></div>
                                 <div class="bookPrice">$4.25</div>
@@ -164,11 +138,9 @@
                             </div>                            
                         </article> 
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/myhero.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/myhero.png" alt="comic image" class="subArticleImage">
+                            </figure>
                             <div class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">My Hero Academia</h3></div>
                                 <div class="bookPrice">$4.25</div>
@@ -177,20 +149,18 @@
                             </div>                            
                         </article>
                         <article class="article-Container">
-                            <a href="/comics.html">
-                                <figure class="subArticleFigure">
-                                    <img src="Shared/img/bleach.png" alt="comic image" class="subArticleImage">
-                                </figure>
-                            </a>
-                            <div class="newsArticle">
+                            <figure class="subArticleFigure">
+                                <img src="Shared/img/bleach.png" alt="comic image" class="subArticleImage">
+                            </figure>
+                            <article class="newsArticle">
                                 <div class="bookTitle"><h3 class="titleHeading">Bleach</h3></div>
                                 <div class="bookPrice">$4.25</div>
                                 <div class="bookDesc">It is the start of the "Thousand Year Blood War". Ichigo will do anything to protect those he cares for.</div>
                                 <button class="orderButton" type="button" data-order="bleach">Order</button>
-                            </div>                            
+                            </article>                            
                         </article>                           
                     </div>
-                </div>
+                </div> 
             </main>
             <footer class="footer-Section">
                 &copy; 2023 - ReedMultiversal Inc. - <a href="contacts.html"> Contact Us</a>
