--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="~/Shared/css/site.css" type="text/css" />
-        <link rel="icon" href="~/Shared/img/ck.png" type="image" />
+        <link rel="stylesheet" href="/Shared/css/site.css" type="text/css" />
+        <link rel="icon" href="/Shared/img/ck.png" type="image" />
         <title>Comics Kingdom</title>
     </head>
 <body>
@@ -41,7 +41,7 @@
                         </li>
                         <li>
                             <div class="navOption-Container">
-                                <a class="navOption" href="/comics.html">
+                                <a class="navOption" href="~/comics.html">
                                     <svg class="navImage-Container" viewBox="0 0 48 48" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path clip-rule="evenodd" d="M6 3H42C42.7957 3 43.5587 3.31607 44.1213 3.87868C44.6839 4.44129 45 5.20435 45 6V42C45 42.7957 44.6839 43.5587 44.1213 44.1213C43.5587 44.6839 42.7957 45 42 45H6C5.20435 45 4.44129 44.6839 3.87868 44.1213C3.31607 43.5587 3 42.7957 3 42V6C3 5.20435 3.31607 4.44129 3.87868 3.87868C4.44129 3.31607 5.20435 3 6 3ZM6 42H9L9 38H6V42ZM36 42H12V25H36V42ZM39 42H42V38H39V42ZM39 35H42V30H39V35ZM39 27H42V22H39V27ZM39 19H42V14H39V19ZM39 11H42V6H39V11ZM36 6L12 6L12 22H36V6ZM6 6L9 6V11H6L6 6ZM6 14H9V19H6L6 14ZM6 22H9V27H6L6 22ZM6 30H9V35H6L6 30Z" fill="" fill-rule="evenodd"></path>
                                     </svg>
