--- a/contacts.html
+++ b/contacts.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/CodeLouisvilleProject_Web-master/Shared/css/site.css" type="text/css" />
+        <link rel="stylesheet" href="/CodeLouisvilleProject_Web-master/Shared/css/site.css" />
         <link rel="icon" href="/CodeLouisvilleProject_Web-master/Shared/img/ck.png" type="image" />
         <title>Contacts | Comics Kingdom</title>
     </head>
