--- a/contacts.html
+++ b/contacts.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/CodeLouisvilleProject_Web-master/Shared/css/site.css" />
-        <link rel="icon" href="/CodeLouisvilleProject_Web-master/Shared/img/ck.png" type="image" />
+        <link rel="stylesheet" href="./Shared/css/site.css" type="text/css" />
+        <link rel="icon" href="./Shared/img/ck.png" type="image" />
         <title>Contacts | Comics Kingdom</title>
     </head>
 <body>
@@ -19,7 +19,7 @@
                 </svg>
             </button>
             <div class="header-Container">
-                <a href="/CodeLouisvilleProject_Web-master/"><h1>Comics Kingdom</h1></a>
+                <a href="./"><h1>Comics Kingdom</h1></a>
             </div>
             <div class="clearfix"></div>
         </header> 
@@ -31,7 +31,7 @@
                     <ul id="main-Nav">
                         <li>
                             <div class="navOption-Container">
-                                <a class="navOption" href="/CodeLouisvilleProject_Web-master/">
+                                <a class="navOption" href="./">
                                     <svg class="navImage-Container"viewBox="0 0 48 48" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path clip-rule="evenodd" d="M23.9864 4.00009C24.3242 4.00009 24.6522 4.11294 24.9185 4.32071L45 20V39.636C44.9985 40.4312 44.5623 41.4377 44 42C43.4377 42.5623 42.4311 42.9985 41.6359 43H27V28H21V43H6.5C5.70485 42.9984 4.56226 42.682 4 42.1197C3.43774 41.5575 3.00163 40.7952 3 40V21L23.0544 4.32071C23.3207 4.11294 23.6487 4.00009 23.9864 4.00009ZM30 28V40H42V21.4314L24 7.40726L6 22V40L18 40V28C18.0008 27.2046 18.3171 26.442 18.8796 25.8796C19.442 25.3171 20.2046 25.0008 21 25H27C27.7954 25.0009 28.5579 25.3173 29.1203 25.8797C29.6827 26.4421 29.9991 27.2046 30 28Z" fill="" fill-rule="evenodd"></path>
                                     </svg>
@@ -41,7 +41,7 @@
                         </li>
                         <li>
                             <div class="navOption-Container">
-                                <a class="navOption" href="/CodeLouisvilleProject_Web-master/comics.html">
+                                <a class="navOption" href="./comics.html">
                                     <svg class="navImage-Container" viewBox="0 0 48 48" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path clip-rule="evenodd" d="M6 3H42C42.7957 3 43.5587 3.31607 44.1213 3.87868C44.6839 4.44129 45 5.20435 45 6V42C45 42.7957 44.6839 43.5587 44.1213 44.1213C43.5587 44.6839 42.7957 45 42 45H6C5.20435 45 4.44129 44.6839 3.87868 44.1213C3.31607 43.5587 3 42.7957 3 42V6C3 5.20435 3.31607 4.44129 3.87868 3.87868C4.44129 3.31607 5.20435 3 6 3ZM6 42H9L9 38H6V42ZM36 42H12V25H36V42ZM39 42H42V38H39V42ZM39 35H42V30H39V35ZM39 27H42V22H39V27ZM39 19H42V14H39V19ZM39 11H42V6H39V11ZM36 6L12 6L12 22H36V6ZM6 6L9 6V11H6L6 6ZM6 14H9V19H6L6 14ZM6 22H9V27H6L6 22ZM6 30H9V35H6L6 30Z" fill="" fill-rule="evenodd"></path>
                                     </svg>
@@ -51,7 +51,7 @@
                         </li>
                         <li>
                             <div class="navOption-Container">
-                                <a class="navOption" href="/CodeLouisvilleProject_Web-master/contacts.html">
+                                <a class="navOption" href="./contacts.html">
                                     <svg class="navImage-Container" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path clip-rule="evenodd" d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" fill="" fill-rule="evenodd"></path>
                                     </svg>
@@ -74,10 +74,10 @@
                 </div>
             </main>
             <footer class="footer-Section">
-                &copy; 2023 - ReedMultiversal Inc. - <a href="/CodeLouisvilleProject_Web-mastercontacts.html"> Contact Us</a>
+                &copy; 2023 - ReedMultiversal Inc. - <a href="./contacts.html"> Contact Us</a>
             </footer>            
         </section>        
     </div>
-    <script src="/CodeLouisvilleProject_Web-masterShared/js/site.js"></script>
+    <script src="./Shared/js/site.js"></script>
 </body>
 </html>
